// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apply defaults - merge modes 1`] = `
Object {
  "obj": Object {
    "foo": Array [
      0,
      1,
    ],
  },
}
`;

exports[`apply defaults - merge modes 2`] = `
Object {
  "obj": Object {
    "foo": Array [
      0,
      1,
    ],
  },
}
`;

exports[`apply defaults - merge modes 3`] = `
Object {
  "obj": Object {
    "foo": Array [
      1,
    ],
  },
}
`;

exports[`apply defaults - merge modes 4`] = `
Object {
  "obj": Object {
    "foo": Array [
      0,
      1,
      2,
    ],
  },
}
`;

exports[`apply defaults - merge modes 5`] = `
Object {
  "obj": Object {
    "foo": Array [
      1,
    ],
  },
}
`;

exports[`apply defaults 1`] = `
Object {
  "obj": Object {
    "foo": Array [
      "a",
      "b",
    ],
  },
}
`;

exports[`apply defaults 2`] = `
Object {
  "obj": Object {
    "foo": Object {
      "a": 10,
      "b": 20,
    },
  },
}
`;

exports[`apply defaults 3`] = `
"Option 'obj.foo' must be of type:
  object
but instead received:
  number
"
`;

exports[`apply defaults 4`] = `
Object {
  "obj": false,
}
`;

exports[`apply defaults 5`] = `
Object {
  "obj": Array [],
}
`;

exports[`apply defaults 6`] = `
Object {
  "obj": Object {},
}
`;

exports[`apply defaults 7`] = `Object {}`;

exports[`apply defaults 8`] = `
Object {
  "obj": 0,
}
`;

exports[`apply defaults 9`] = `"[Schema] Provide a default value or mark as \\"optional\\" in obj"`;

exports[`apply defaults 10`] = `
Object {
  "obj": 0,
}
`;

exports[`apply defaults 11`] = `Object {}`;

exports[`apply defaults 12`] = `
Object {
  "obj": Object {
    "a": true,
    "b": true,
  },
}
`;

exports[`apply defaults 13`] = `
Object {
  "obj": Object {
    "a": false,
    "b": false,
  },
}
`;

exports[`apply defaults 14`] = `
Object {
  "obj": Object {
    "a": true,
    "b": true,
  },
}
`;

exports[`apply defaults 15`] = `
Object {
  "obj": Object {
    "a": false,
    "b": true,
  },
}
`;

exports[`apply defaults 16`] = `
Object {
  "minify": true,
  "mode": "production",
}
`;

exports[`show where the error is 1`] = `
"Option 'obj [in b]' must be of type:
  object
but instead received:
  array
"
`;

exports[`validate 1`] = `
Array [
  Array [
    "Deprecation Warning: Option 'deprecated' is deprecated.
",
  ],
  Array [
    "OK",
  ],
]
`;

exports[`validate 2`] = `
Array [
  Array [
    "Validation Error:

  Option 'config' must be of type:
    string
  but instead received:
    boolean

",
  ],
]
`;

exports[`validate 3`] = `
Array [
  Array [
    "Validation Error:

  Option 'obj.foo.bar' must be of type:
    string
  but instead received:
    number
  Example:
  {
    'obj': {
      'foo': {
        'bar': 'example'
      }
    }
  }
",
  ],
]
`;

exports[`validate 4`] = `
Array [
  Array [
    "Validation Error:

  Option 'obj.foo' must be of type:
    object
  but instead received:
    number

",
  ],
]
`;

exports[`validate 5`] = `
Array [
  Array [
    "Validation Error:

  Unrecognized option 'obj.foo.baz'. Did you mean 'obj.foo.bar'?
",
  ],
]
`;

exports[`validate 6`] = `
Array [
  Array [
    "Validation Error:

  Option 'obj.foo.1' must be of type:
    string
  but instead received:
    number
  Example:
  {
    'obj': {
      'foo': {
        '1': 'example'
      }
    }
  }
",
  ],
]
`;

exports[`validate 7`] = `
Array [
  Array [
    "Validation Error:

  Option 'obj.foo' must be an array of 2 items.

",
  ],
]
`;

exports[`validate 8`] = `
Array [
  Array [
    "Validation Error:

  Option 'obj.foo' should be one of these types:
    string | number
  but instead received:
    [ 'string', 10 ]
  Example:
  {
    'obj': {
      'foo': 'example'
    }
  }
",
  ],
]
`;

exports[`validate 9`] = `
Array [
  Array [
    "Validation Error:

  Option 'obj.foo' should be one of:
    0 | 1
  but instead received:
    2
",
  ],
]
`;

exports[`validate 10`] = `
Array [
  Array [
    "Validation Error:

  Option 'required' is required.
",
  ],
]
`;

exports[`validate 11`] = `
Array [
  Array [
    "OK",
  ],
]
`;

exports[`validate 12`] = `
Array [
  Array [
    "Validation Error:

  Option 'required' is required.
",
  ],
]
`;

exports[`validate 13`] = `
Array [
  Array [
    "Validation Error:

  Option 'obj.foo' should be one of these types:
    0 | 1 | 'object'
  but instead received:
    2
  Example:
  {
    'obj': {
      'foo': 1
    }
  }
",
  ],
]
`;

exports[`validate 14`] = `
Array [
  Array [
    "Validation Error:

  Option 'obj.foo' should be one of these types:
    0 | 1 | object
  but instead received:
    2
  Example:
  {
    'obj': {
      'foo': 1
    }
  }
",
  ],
]
`;

exports[`validate 15`] = `
Array [
  Array [
    "OK",
  ],
]
`;

exports[`validate 16`] = `
Array [
  Array [
    "Validation Error:

  foo and bar should not be set at the same time
",
  ],
]
`;

exports[`validate 17`] = `
Array [
  Array [
    "Validation Error:

  Unrecognized option 'foo.unknown'.
",
  ],
]
`;

exports[`validate 18`] = `
Array [
  Array [
    "OK",
  ],
]
`;

exports[`validate 19`] = `
Array [
  Array [
    "Validation Error:

  Option 'obj.foo' must be of type:
    array
  but instead received:
    object
  Example:
  {
    'obj': {
      'foo': [ 'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a',
        'a' ]
    }
  }
",
  ],
]
`;
